<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/comingSoonFragment"
        android:icon="@drawable/ic_baseline_ondemand_video_24"
        android:title="@string/coming_soon" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/watch_list" />
    <item
        android:id="@+id/moreFragment"
        android:icon="@drawable/ic_outline_reorder_24"
        android:title="@string/more" />
</menu>