<resources>
    <string name="app_name">Notflix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="tv_shoe">Tv Show</string>
    <string name="watch_now">Watch now</string>
    <string name="continue_watching">Continue watching</string>
    <string name="people_also_watch_this">People also watch this</string>
    <string name="poster">poster</string>
    <string name="popular_movies">Trending movies</string>
    <string name="trending_tv_shows">Popular Tv Shows</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="watch_list">Watch List</string>
    <string name="info">Info</string>
    <string name="watch_on_tv">Watch on TV</string>
    <string name="your_favorite">Your favorite</string>
    <string name="more">More</string>
    <string name="title_featurefavorite">Module Title</string>

</resources>