...
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/app_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_eps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_eps"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_episodes"/>
...
